# Subtyping-Theory

./: README.md  extracted_rules.md  extracted_rules_aristotle.lean  semantics.lp
.claude/: settings.local.json
subindex/: lambdapi.pkg  semantics.dk  semantics.lp
subindex/LIPIcs_2021_Version_Sample/: lipics-v2021-sample-article.aux  lipics-v2021-sample-article.bib  lipics-v2021-sample-article.out  lipics-v2021-sample-article.tex  lipics-v2021-sample-article.vtc  mini.aux  mini.bbl  mini.blg  mini.fdb_latexmk  mini.fls  mini.out  mini.tex  mini.vtc  mini.xdv  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  paper.vtc
subindex/subtyping/: encode.lp  enconding.lp  lambdapi.pkg  semantics.lp
subindex/subtyping/transpiler/: README.md  siglp-transpiler.cabal
subindex/subtyping/transpiler/app/: Main.hs
subindex/subtyping/transpiler/examples/: sample.lp  sample.siglp  sample_try.siglp
test/: test.dk  test.lp
