cabal-version:      2.4
name:               siglp-transpiler
version:            0.1.0.0
build-type:         Simple

executable siglp-transpiler
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -Wextra -Wno-type-defaults
  build-depends:
      base >=4.18 && <5
    , parsec >=3.1 && <4
